# kubi

./: .gitignore  README.md
client/cpp/: CMakeLists.txt  demo.cpp  http_parser.h  kubi_client_cpp_imp.cpp  kubi_client_cpp_imp.h  kubi_websocket.cpp  kubi_websocket.h  kubi_websocket_tool.cpp  kubi_websocket_tool.h  websocket_parser.c
client/cpp/ineed/Libuv/: LibuvConfig.cmake
client/cpp/ineed/Libuv/lib/Debug/: uv_a.lib
client/cpp/ineed/ZLIB/: ZLIBConfig.cmake
client/cpp/ineed/ZLIB/lib/: zlibstatic.lib
client/cpp/ineed/ZLIB/share/zlib/: LibUvConfig.cmake
client/cpp/ineed/gflags/lib/: gflags_static.lib
client/cpp/ineed/gflags/lib/cmake/gflags/: gflags-nonamespace-targets.cmake  gflags-targets-debug.cmake  gflags-targets-release.cmake
client/cpp/ineed/glog/lib/: glogd.lib
client/cpp/ineed/glog/lib/cmake/glog/: glog-targets.cmake
client/cpp/ineed/glog/lib/pkgconfig/: libglog.pc
client/cpp/ineed/jsoncpp/lib/: jsoncpp.lib
client/cpp/ineed/jsoncpp/lib/cmake/jsoncpp/: jsoncppConfig-debug.cmake
client/cpp/ineed/protobuf/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
client/cpp/ineed/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
client/cpp/ineed/pybind11/share/cmake/pybind11/: pybind11ConfigVersion.cmake
client/js/: Kubi.js  Kubi_client.js  demo.html
client/python/: Kubi_pb2.py  demo_caculater.py  how_to_use.py  kubi_client.py  requirements.txt
client/unity/: UpgradeLog.htm
client/unity/Assets/: Kubi.cs  Kubi_Client.cs  how_to_use.cs  how_to_use.unity
client/unity/Assets/best_http/: HTTPResponse.cs
client/unity/Assets/best_http/WebSocket/: WebSocketResponse.cs
client/unity/ProjectSettings/: ProjectSettings.asset
client/unity/UserSettings/: EditorUserSettings.asset
server/: CMakeLists.txt  Kubi.h  Kubi.pb.cc  demo.cpp  kubi_ser.cpp  kubi_ser.h  kubi_ser.py  kubi_ser_cpp11_imp.cpp  kubi_ser_cpp11_imp.h  kubi_ser_demo.py  kubi_ser_py.py  kubi_ser_py_imp.cpp  kubi_ser_py_imp.h  kubi_session.cpp  kubi_session.h  kubi_utils.cpp  kubi_utils.h  kubi_ws.cpp  kubi_ws.h  websocket_parser.h
server/ineed/Libuv/lib/Release/: uv.lib  uv_a.lib
server/ineed/ZLIB/lib/: zlibd.lib  zlibstaticd.lib
server/ineed/ZLIB/share/pkgconfig/: zlib.pc
server/ineed/gflags/: gflagsConfig.cmake
server/ineed/gflags/lib/cmake/gflags/: gflags-nonamespace-targets-debug.cmake  gflags-targets.cmake
server/ineed/glog/lib/: glog.lib
server/ineed/jsoncpp/: jsoncppConfig.cmake
server/ineed/jsoncpp/lib/cmake/jsoncpp/: jsoncppConfig.cmake
server/ineed/jsoncpp/lib/pkgconfig/: jsoncpp.pc
server/ineed/protobuf/lib/: libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib
server/ineed/pybind11/share/cmake/pybind11/: pybind11Tools.cmake
